# serializer version: 1
# name: test_grouping_does_not_replace_different_or_nested_expressions[SELECT 2, count() FROM users GROUP BY 2]
  tuple(
    'SELECT 2, count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 2',
    dict({
    }),
  )
# ---
# name: test_grouping_does_not_replace_different_or_nested_expressions[SELECT a.user_id FROM users a JOIN users b ON a.user_id = b.user_id GROUP BY b.user_id]
  tuple(
    'SELECT "a"."user_id" FROM "ducklake"."analytics"."users" AS "a" JOIN "ducklake"."analytics"."users" AS "b" ON ("a"."user_id" = "b"."user_id") GROUP BY "b"."user_id"',
    dict({
    }),
  )
# ---
# name: test_grouping_does_not_replace_different_or_nested_expressions[SELECT properties.color, count() FROM users GROUP BY properties.shape]
  tuple(
    'SELECT json_extract_scalar("users"."properties", %(hogql_val_0)s), count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY json_extract_scalar("users"."properties", %(hogql_val_1)s)',
    dict({
      'hogql_val_0': '$["color"]',
      'hogql_val_1': '$["shape"]',
    }),
  )
# ---
# name: test_grouping_does_not_replace_different_or_nested_expressions[SELECT user_id = toString(1) AS bucket, count() FROM users GROUP BY user_id = toString(true)]
  tuple(
    'SELECT ("users"."user_id" = CAST(1 AS VARCHAR)) AS "bucket", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY ("users"."user_id" = CAST(true AS VARCHAR))',
    dict({
    }),
  )
# ---
# name: test_grouping_does_not_replace_different_or_nested_expressions[SELECT user_id AS id FROM users GROUP BY concat(id, 'suffix')]
  tuple(
    'SELECT "users"."user_id" AS "id" FROM "ducklake"."analytics"."users" AS "users" GROUP BY concat(CAST("users"."user_id" AS VARCHAR), CAST(%(hogql_val_0)s AS VARCHAR))',
    dict({
      'hogql_val_0': 'suffix',
    }),
  )
# ---
# name: test_grouping_does_not_replace_different_or_nested_expressions[SELECT user_id, count() FROM users GROUP BY ROLLUP(user_id)]
  tuple(
    'SELECT "users"."user_id", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY ROLLUP("users"."user_id")',
    dict({
    }),
  )
# ---
# name: test_grouping_reuses_projected_expression[concat(user_id, 'suffix')-None]
  tuple(
    'SELECT concat(CAST("users"."user_id" AS VARCHAR), CAST(%(hogql_val_0)s AS VARCHAR)) AS "dimension", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
      'hogql_val_0': 'suffix',
    }),
  )
# ---
# name: test_grouping_reuses_projected_expression[integer_alias]
  tuple(
    'SELECT 2 AS "dimension", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
    }),
  )
# ---
# name: test_grouping_reuses_projected_expression[notEmpty(properties.color)-None]
  tuple(
    'SELECT (json_extract_scalar("users"."properties", %(hogql_val_0)s) IS NOT NULL AND json_extract_scalar("users"."properties", %(hogql_val_0)s) <> \'\') AS "dimension", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
      'hogql_val_0': '$["color"]',
    }),
  )
# ---
# name: test_grouping_reuses_projected_expression[properties.color-None]
  tuple(
    'SELECT json_extract_scalar("users"."properties", %(hogql_val_0)s) AS "dimension", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
      'hogql_val_0': '$["color"]',
    }),
  )
# ---
# name: test_grouping_reuses_projected_expression[toStartOfMonth(toTimeZone(created_at, 'UTC'))-None]
  tuple(
    'SELECT CAST(date_trunc(\'month\', at_timezone(with_timezone(CAST("users"."created_at" AS TIMESTAMP), \'UTC\'), %(hogql_val_0)s)) AS DATE) AS "dimension", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
      'hogql_val_0': 'UTC',
    }),
  )
# ---
# name: test_grouping_reuses_projected_expression[zero_alias]
  tuple(
    'SELECT 0 AS "dimension", count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
    }),
  )
# ---
# name: test_lowered_property_timestamp_is_not_constant
  tuple(
    'SELECT coalesce(TRY_CAST(json_extract_scalar("users"."properties", %(hogql_val_0)s) AS TIMESTAMP), CAST(TRY(from_iso8601_timestamp(json_extract_scalar("users"."properties", %(hogql_val_0)s))) AS TIMESTAMP), CAST(from_unixtime(TRY_CAST(json_extract_scalar("users"."properties", %(hogql_val_0)s) AS DOUBLE)) AS TIMESTAMP)) FROM "ducklake"."analytics"."users" AS "users"',
    dict({
      'hogql_val_0': '$["cutoff"]',
    }),
  )
# ---
# name: test_prepared_trino_transpiler_does_not_rebuild_the_schema_database[SELECT properties.color, count() FROM users GROUP BY properties.color]
  tuple(
    'SELECT json_extract_scalar("users"."properties", %(hogql_val_0)s), count(*) FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1',
    dict({
      'hogql_val_0': '$["color"]',
    }),
  )
# ---
# name: test_prepared_trino_transpiler_does_not_rebuild_the_schema_database[SELECT user_id FROM users ORDER BY created_at DESC LIMIT 2 BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id" FROM (SELECT "users"."user_id" AS "user_id", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY "users"."created_at" DESC) AS "__hogql_limit_by_row_0", "users"."created_at" AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC',
    dict({
    }),
  )
# ---
# name: test_prepared_trino_transpiler_does_not_rebuild_the_schema_database[SELECT user_id FROM users WHERE user_id = 'person-1']
  tuple(
    'SELECT "users"."user_id" FROM "ducklake"."analytics"."users" AS "users" WHERE ("users"."user_id" = %(hogql_val_0)s)',
    dict({
      'hogql_val_0': 'person-1',
    }),
  )
# ---
# name: test_prepared_trino_transpiler_does_not_rebuild_the_schema_database[SELECT user_id FROM users WHERE user_id IN ['violet', 'amber']]
  tuple(
    'SELECT "users"."user_id" FROM "ducklake"."analytics"."users" AS "users" WHERE ("users"."user_id" IN (%(hogql_val_0)s, %(hogql_val_1)s))',
    dict({
      'hogql_val_0': 'violet',
      'hogql_val_1': 'amber',
    }),
  )
# ---
# name: test_prepared_trino_transpiler_does_not_rebuild_the_schema_database[WITH seed AS (SELECT 7 AS n) SELECT n FROM seed UNION ALL SELECT n FROM seed]
  tuple(
    'WITH "seed" AS (SELECT 7 AS "n") (SELECT "seed"."n" FROM "seed") UNION ALL (SELECT "seed"."n" FROM "seed")',
    dict({
    }),
  )
# ---
# name: test_tracks_every_registered_function_without_a_trino_mapping
  dict({
    'aggregate': list([
      'anyHeavy',
      'anyHeavyIf',
      'anyLastIf',
      'argMaxMerge',
      'argMaxState',
      'argMinMerge',
      'argMinState',
      'avgArgMax',
      'avgArgMaxIf',
      'avgArgMaxOrDefault',
      'avgArgMaxOrDefaultIf',
      'avgArgMaxOrNull',
      'avgArgMaxOrNullIf',
      'avgArgMin',
      'avgArgMinIf',
      'avgArgMinOrDefault',
      'avgArgMinOrDefaultIf',
      'avgArgMinOrNull',
      'avgArgMinOrNullIf',
      'avgArray',
      'avgArrayIf',
      'avgArrayOrDefault',
      'avgArrayOrDefaultIf',
      'avgArrayOrNull',
      'avgArrayOrNullIf',
      'avgForEach',
      'avgForEachIf',
      'avgForEachOrDefault',
      'avgForEachOrDefaultIf',
      'avgForEachOrNull',
      'avgForEachOrNullIf',
      'avgMap',
      'avgMapIf',
      'avgMapMerge',
      'avgMapMergeIf',
      'avgMapOrDefault',
      'avgMapOrDefaultIf',
      'avgMapOrNull',
      'avgMapOrNullIf',
      'avgMapState',
      'avgMerge',
      'avgMergeIf',
      'avgMergeOrDefault',
      'avgMergeOrDefaultIf',
      'avgMergeOrNull',
      'avgMergeOrNullIf',
      'avgOrDefault',
      'avgOrDefaultIf',
      'avgOrNull',
      'avgOrNullIf',
      'avgState',
      'avgStateIf',
      'avgStateOrDefault',
      'avgStateOrDefaultIf',
      'avgStateOrNull',
      'avgStateOrNullIf',
      'avgWeighted',
      'avgWeightedIf',
      'contingency',
      'contingencyIf',
      'countArgMax',
      'countArgMaxIf',
      'countArgMaxOrDefault',
      'countArgMaxOrDefaultIf',
      'countArgMaxOrNull',
      'countArgMaxOrNullIf',
      'countArgMin',
      'countArgMinIf',
      'countArgMinOrDefault',
      'countArgMinOrDefaultIf',
      'countArgMinOrNull',
      'countArgMinOrNullIf',
      'countArray',
      'countArrayIf',
      'countArrayOrDefault',
      'countArrayOrDefaultIf',
      'countArrayOrNull',
      'countArrayOrNullIf',
      'countDistinctArgMax',
      'countDistinctArgMaxIf',
      'countDistinctArgMaxOrDefault',
      'countDistinctArgMaxOrDefaultIf',
      'countDistinctArgMaxOrNull',
      'countDistinctArgMaxOrNullIf',
      'countDistinctArgMin',
      'countDistinctArgMinIf',
      'countDistinctArgMinOrDefault',
      'countDistinctArgMinOrDefaultIf',
      'countDistinctArgMinOrNull',
      'countDistinctArgMinOrNullIf',
      'countDistinctArray',
      'countDistinctArrayIf',
      'countDistinctArrayOrDefault',
      'countDistinctArrayOrDefaultIf',
      'countDistinctArrayOrNull',
      'countDistinctArrayOrNullIf',
      'countDistinctForEach',
      'countDistinctForEachIf',
      'countDistinctForEachOrDefault',
      'countDistinctForEachOrDefaultIf',
      'countDistinctForEachOrNull',
      'countDistinctForEachOrNullIf',
      'countDistinctMap',
      'countDistinctMapIf',
      'countDistinctMapOrDefault',
      'countDistinctMapOrDefaultIf',
      'countDistinctMapOrNull',
      'countDistinctMapOrNullIf',
      'countDistinctMerge',
      'countDistinctMergeIf',
      'countDistinctMergeOrDefault',
      'countDistinctMergeOrDefaultIf',
      'countDistinctMergeOrNull',
      'countDistinctMergeOrNullIf',
      'countDistinctOrDefault',
      'countDistinctOrDefaultIf',
      'countDistinctOrNull',
      'countDistinctOrNullIf',
      'countDistinctState',
      'countDistinctStateIf',
      'countDistinctStateOrDefault',
      'countDistinctStateOrDefaultIf',
      'countDistinctStateOrNull',
      'countDistinctStateOrNullIf',
      'countForEach',
      'countForEachIf',
      'countForEachOrDefault',
      'countForEachOrDefaultIf',
      'countForEachOrNull',
      'countForEachOrNullIf',
      'countMap',
      'countMapIf',
      'countMapOrDefault',
      'countMapOrDefaultIf',
      'countMapOrNull',
      'countMapOrNullIf',
      'countMerge',
      'countMergeIf',
      'countMergeOrDefault',
      'countMergeOrDefaultIf',
      'countMergeOrNull',
      'countMergeOrNullIf',
      'countOrDefault',
      'countOrDefaultIf',
      'countOrNull',
      'countOrNullIf',
      'countState',
      'countStateIf',
      'countStateOrDefault',
      'countStateOrDefaultIf',
      'countStateOrNull',
      'countStateOrNullIf',
      'cramersV',
      'cramersVBiasCorrected',
      'cramersVBiasCorrectedIf',
      'cramersVIf',
      'deltaSum',
      'deltaSumIf',
      'deltaSumTimestamp',
      'deltaSumTimestampIf',
      'groupArrayInsertAt',
      'groupArrayInsertAtIf',
      'groupArrayMovingAvg',
      'groupArrayMovingAvgIf',
      'groupArrayMovingSum',
      'groupArrayMovingSumIf',
      'groupArraySample',
      'groupArraySampleIf',
      'groupBitmap',
      'groupBitmapAnd',
      'groupBitmapAndIf',
      'groupBitmapAndState',
      'groupBitmapIf',
      'groupBitmapOr',
      'groupBitmapOrIf',
      'groupBitmapOrState',
      'groupBitmapState',
      'groupBitmapXor',
      'groupBitmapXorIf',
      'groupUniqArrayArray',
      'groupUniqArrayArrayIf',
      'kurtPop',
      'kurtPopIf',
      'kurtSamp',
      'kurtSampIf',
      'maxArgMax',
      'maxArgMaxIf',
      'maxArgMaxOrDefault',
      'maxArgMaxOrDefaultIf',
      'maxArgMaxOrNull',
      'maxArgMaxOrNullIf',
      'maxArgMin',
      'maxArgMinIf',
      'maxArgMinOrDefault',
      'maxArgMinOrDefaultIf',
      'maxArgMinOrNull',
      'maxArgMinOrNullIf',
      'maxArray',
      'maxArrayIf',
      'maxArrayOrDefault',
      'maxArrayOrDefaultIf',
      'maxArrayOrNull',
      'maxArrayOrNullIf',
      'maxForEach',
      'maxForEachIf',
      'maxForEachOrDefault',
      'maxForEachOrDefaultIf',
      'maxForEachOrNull',
      'maxForEachOrNullIf',
      'maxIntersections',
      'maxIntersectionsIf',
      'maxIntersectionsPosition',
      'maxIntersectionsPositionIf',
      'maxMap',
      'maxMapIf',
      'maxMapOrDefault',
      'maxMapOrDefaultIf',
      'maxMapOrNull',
      'maxMapOrNullIf',
      'maxMerge',
      'maxMergeIf',
      'maxMergeOrDefault',
      'maxMergeOrDefaultIf',
      'maxMergeOrNull',
      'maxMergeOrNullIf',
      'maxOrDefault',
      'maxOrDefaultIf',
      'maxOrNull',
      'maxOrNullIf',
      'maxState',
      'maxStateIf',
      'maxStateOrDefault',
      'maxStateOrDefaultIf',
      'maxStateOrNull',
      'maxStateOrNullIf',
      'medianArgMax',
      'medianArgMaxIf',
      'medianArgMaxOrDefault',
      'medianArgMaxOrDefaultIf',
      'medianArgMaxOrNull',
      'medianArgMaxOrNullIf',
      'medianArgMin',
      'medianArgMinIf',
      'medianArgMinOrDefault',
      'medianArgMinOrDefaultIf',
      'medianArgMinOrNull',
      'medianArgMinOrNullIf',
      'medianArray',
      'medianArrayIf',
      'medianArrayOrDefault',
      'medianArrayOrDefaultIf',
      'medianArrayOrNull',
      'medianArrayOrNullIf',
      'medianBFloat16',
      'medianBFloat16If',
      'medianDeterministic',
      'medianDeterministicIf',
      'medianExact',
      'medianExactHigh',
      'medianExactHighIf',
      'medianExactIf',
      'medianExactLow',
      'medianExactLowIf',
      'medianExactWeighted',
      'medianExactWeightedIf',
      'medianForEach',
      'medianForEachIf',
      'medianForEachOrDefault',
      'medianForEachOrDefaultIf',
      'medianForEachOrNull',
      'medianForEachOrNullIf',
      'medianMap',
      'medianMapIf',
      'medianMapOrDefault',
      'medianMapOrDefaultIf',
      'medianMapOrNull',
      'medianMapOrNullIf',
      'medianMerge',
      'medianMergeIf',
      'medianMergeOrDefault',
      'medianMergeOrDefaultIf',
      'medianMergeOrNull',
      'medianMergeOrNullIf',
      'medianOrDefault',
      'medianOrDefaultIf',
      'medianOrNull',
      'medianOrNullIf',
      'medianState',
      'medianStateIf',
      'medianStateOrDefault',
      'medianStateOrDefaultIf',
      'medianStateOrNull',
      'medianStateOrNullIf',
      'medianTDigest',
      'medianTDigestIf',
      'medianTDigestWeighted',
      'medianTDigestWeightedIf',
      'medianTiming',
      'medianTimingIf',
      'medianTimingWeighted',
      'medianTimingWeightedIf',
      'minArgMax',
      'minArgMaxIf',
      'minArgMaxOrDefault',
      'minArgMaxOrDefaultIf',
      'minArgMaxOrNull',
      'minArgMaxOrNullIf',
      'minArgMin',
      'minArgMinIf',
      'minArgMinOrDefault',
      'minArgMinOrDefaultIf',
      'minArgMinOrNull',
      'minArgMinOrNullIf',
      'minArray',
      'minArrayIf',
      'minArrayOrDefault',
      'minArrayOrDefaultIf',
      'minArrayOrNull',
      'minArrayOrNullIf',
      'minForEach',
      'minForEachIf',
      'minForEachOrDefault',
      'minForEachOrDefaultIf',
      'minForEachOrNull',
      'minForEachOrNullIf',
      'minMap',
      'minMapIf',
      'minMapOrDefault',
      'minMapOrDefaultIf',
      'minMapOrNull',
      'minMapOrNullIf',
      'minMerge',
      'minMergeIf',
      'minMergeOrDefault',
      'minMergeOrDefaultIf',
      'minMergeOrNull',
      'minMergeOrNullIf',
      'minOrDefault',
      'minOrDefaultIf',
      'minOrNull',
      'minOrNullIf',
      'minState',
      'minStateIf',
      'minStateOrDefault',
      'minStateOrDefaultIf',
      'minStateOrNull',
      'minStateOrNullIf',
      'quantiles',
      'quantilesIf',
      'quantilesMerge',
      'quantilesMergeIf',
      'quantilesState',
      'quantilesStateIf',
      'simpleLinearRegression',
      'simpleLinearRegressionIf',
      'skewPop',
      'skewPopIf',
      'skewSamp',
      'skewSampIf',
      'sumArgMax',
      'sumArgMaxIf',
      'sumArgMaxOrDefault',
      'sumArgMaxOrDefaultIf',
      'sumArgMaxOrNull',
      'sumArgMaxOrNullIf',
      'sumArgMin',
      'sumArgMinIf',
      'sumArgMinOrDefault',
      'sumArgMinOrDefaultIf',
      'sumArgMinOrNull',
      'sumArgMinOrNullIf',
      'sumArray',
      'sumArrayIf',
      'sumArrayOrDefault',
      'sumArrayOrDefaultIf',
      'sumArrayOrNull',
      'sumArrayOrNullIf',
      'sumForEach',
      'sumForEachIf',
      'sumForEachMerge',
      'sumForEachOrDefault',
      'sumForEachOrDefaultIf',
      'sumForEachOrNull',
      'sumForEachOrNullIf',
      'sumForEachState',
      'sumMap',
      'sumMapIf',
      'sumMapMerge',
      'sumMapMergeIf',
      'sumMapOrDefault',
      'sumMapOrDefaultIf',
      'sumMapOrNull',
      'sumMapOrNullIf',
      'sumMerge',
      'sumMergeIf',
      'sumMergeOrDefault',
      'sumMergeOrDefaultIf',
      'sumMergeOrNull',
      'sumMergeOrNullIf',
      'sumOrDefault',
      'sumOrDefaultIf',
      'sumOrNull',
      'sumOrNullIf',
      'sumState',
      'sumStateIf',
      'sumStateOrDefault',
      'sumStateOrDefaultIf',
      'sumStateOrNull',
      'sumStateOrNullIf',
      'sumWithOverflow',
      'sumWithOverflowIf',
      'theilsU',
      'theilsUIf',
      'uniqCombined',
      'uniqExactMerge',
      'uniqExactState',
      'uniqHLL12',
      'uniqHLL12If',
      'uniqMap',
      'uniqMapMerge',
      'uniqMapMergeIf',
      'uniqMerge',
      'uniqMergeIf',
      'uniqState',
      'uniqStateIf',
      'uniqTheta',
      'uniqThetaIf',
      'uniqUpToMerge',
      'windowFunnel',
    ]),
    'posthog': list([
      '__preview_getBotName',
      '__preview_getBotOperator',
      '__preview_getBotType',
      '__preview_getTrafficCategory',
      '__preview_getTrafficType',
      '__preview_isBot',
      '_defaultChannelType',
      '_domainType',
      'embedText',
      'explainCSPReport',
      'getBotName',
      'getBotOperator',
      'getBotType',
      'getSurveyResponse',
      'getTrafficCategory',
      'getTrafficType',
      'isLikelyBot',
      'lookupDomainType',
      'lookupOrganicMediumType',
      'lookupOrganicSourceType',
      'lookupPaidMediumType',
      'lookupPaidSourceType',
      'matchesAction',
      'recordingButton',
      'sortablesemver',
      'sparkline',
      'uniqueSurveySubmissionsFilter',
    ]),
    'scalar': list([
      'IPv4CIDRToRange',
      'IPv4NumToString',
      'IPv4StringToNum',
      'IPv4StringToNumOrDefault',
      'IPv4StringToNumOrNull',
      'IPv4ToIPv6',
      'IPv6CIDRToRange',
      'IPv6NumToString',
      'IPv6StringToNum',
      'IPv6StringToNumOrDefault',
      'IPv6StringToNumOrNull',
      'JSONType',
      'L1Normalize',
      'L2Normalize',
      'LinfNormalize',
      'LpDistance',
      'LpNorm',
      'LpNormalize',
      'URLHierarchy',
      'URLPathHierarchy',
      'UUIDv7ToDateTime',
      '_finalizeAggregation',
      '_toUInt128',
      'accurateCast',
      'aggregate_funnel',
      'aggregate_funnel_array',
      'aggregate_funnel_array_json',
      'aggregate_funnel_array_trends',
      'aggregate_funnel_array_trends_json',
      'aggregate_funnel_array_trends_test',
      'aggregate_funnel_cohort',
      'aggregate_funnel_cohort_json',
      'aggregate_funnel_cohort_trends',
      'aggregate_funnel_cohort_trends_json',
      'aggregate_funnel_json',
      'aggregate_funnel_test',
      'aggregate_funnel_trends_json',
      'alphaTokens',
      'arrayAUC',
      'arrayCumSum',
      'arrayCumSumNonNegative',
      'arrayFill',
      'arrayJoin',
      'arrayLast',
      'arrayReduce',
      'arrayReverseFill',
      'arrayReverseSplit',
      'arraySplit',
      'bar',
      'base58Decode',
      'base58Encode',
      'bitRotateLeft',
      'bitRotateRight',
      'bitSlice',
      'bitmapAnd',
      'bitmapAndCardinality',
      'bitmapAndnot',
      'bitmapAndnotCardinality',
      'bitmapBuild',
      'bitmapCardinality',
      'bitmapContains',
      'bitmapHasAll',
      'bitmapHasAny',
      'bitmapMax',
      'bitmapMin',
      'bitmapOr',
      'bitmapOrCardinality',
      'bitmapSubsetInRange',
      'bitmapSubsetLimit',
      'bitmapToArray',
      'bitmapTransform',
      'bitmapXor',
      'bitmapXorCardinality',
      'btrim',
      'convertCharset',
      'countSubstringsCaseInsensitiveUTF8',
      'cutIPv6',
      'cutToFirstSignificantSubdomainWithWWW',
      'cutURLParameter',
      'dateName',
      'date_bin',
      'decodeURLFormComponent',
      'decodeXMLComponent',
      'defaultValueOfTypeName',
      'dynamicType',
      'encodeURLFormComponent',
      'encodeXMLComponent',
      'erf',
      'erfc',
      'extractAllGroupsHorizontal',
      'extractAllGroupsVertical',
      'extractGroups',
      'extractIPv4Substrings',
      'extractTextFromHTML',
      'extractURLParameterNames',
      'extractURLParameters',
      'factorial',
      'firstSignificantSubdomain',
      'format',
      'formatReadableDecimalSize',
      'formatReadableQuantity',
      'formatReadableSize',
      'gcd',
      'generateSeries',
      'geoDistance',
      'geoToH3',
      'geohashDecode',
      'geohashEncode',
      'geohashesInBox',
      'greatCircleAngle',
      'greatCircleDistance',
      'h3CellAreaM2',
      'h3CellAreaRads2',
      'h3Distance',
      'h3EdgeAngle',
      'h3EdgeLengthKm',
      'h3EdgeLengthM',
      'h3ExactEdgeLengthKm',
      'h3ExactEdgeLengthM',
      'h3ExactEdgeLengthRads',
      'h3GetBaseCell',
      'h3GetDestinationIndexFromUnidirectionalEdge',
      'h3GetFaces',
      'h3GetIndexesFromUnidirectionalEdge',
      'h3GetOriginIndexFromUnidirectionalEdge',
      'h3GetPentagonIndexes',
      'h3GetRes0Indexes',
      'h3GetResolution',
      'h3GetUnidirectionalEdge',
      'h3GetUnidirectionalEdgeBoundary',
      'h3GetUnidirectionalEdgesFromHexagon',
      'h3HexAreaKm2',
      'h3HexAreaM2',
      'h3HexRing',
      'h3IndexesAreNeighbors',
      'h3IsPentagon',
      'h3IsResClassIII',
      'h3IsValid',
      'h3Line',
      'h3NumHexagons',
      'h3PointDistKm',
      'h3PointDistM',
      'h3PointDistRads',
      'h3ToCenterChild',
      'h3ToChildren',
      'h3ToGeo',
      'h3ToGeoBoundary',
      'h3ToParent',
      'h3ToString',
      'h3UnidirectionalEdgeIsValid',
      'h3kRing',
      'hasAllTokens',
      'hasAnyTokens',
      'hasSubsequence',
      'hasSubsequenceCaseInsensitive',
      'hasSubsequenceCaseInsensitiveUTF8',
      'hasSubsequenceUTF8',
      'hasToken',
      'hasTokenCaseInsensitive',
      'hasTokenCaseInsensitiveOrNull',
      'hasTokenOrNull',
      'hop',
      'hopEnd',
      'hopStart',
      'ifNotFinite',
      'indexHint',
      'initcap',
      'isIPAddressInRange',
      'isIPv4String',
      'isIPv6String',
      'isValidUTF8',
      'lagInFrame',
      'languageCodeToName',
      'lcm',
      'leadInFrame',
      'lgamma',
      'locate',
      'make_interval',
      'make_timestamp',
      'make_timestamptz',
      'mapAdd',
      'mapPopulateSeries',
      'mapSubtract',
      'multiFuzzyMatchAllIndices',
      'multiFuzzyMatchAny',
      'multiFuzzyMatchAnyIndex',
      'multiMatchAllIndices',
      'multiMatchAny',
      'multiMatchAnyIndex',
      'multiSearchAllPositions',
      'multiSearchAllPositionsCaseInsensitive',
      'multiSearchAllPositionsCaseInsensitiveUTF8',
      'multiSearchAllPositionsUTF8',
      'multiSearchAny',
      'multiSearchAnyCaseInsensitiveUTF8',
      'multiSearchAnyUTF8',
      'multiSearchFirstIndex',
      'multiSearchFirstIndexCaseInsensitive',
      'multiSearchFirstIndexCaseInsensitiveUTF8',
      'multiSearchFirstIndexUTF8',
      'multiSearchFirstPosition',
      'multiSearchFirstPositionCaseInsensitive',
      'multiSearchFirstPositionCaseInsensitiveUTF8',
      'multiSearchFirstPositionUTF8',
      'netloc',
      'ngramDistanceCaseInsensitive',
      'ngramDistanceCaseInsensitiveUTF8',
      'ngramDistanceUTF8',
      'ngramSearch',
      'ngramSearchCaseInsensitive',
      'ngramSearchCaseInsensitiveUTF8',
      'ngramSearchUTF8',
      'ngrams',
      'nowInBlock',
      'pathFull',
      'pointInEllipses',
      'pointInPolygon',
      'queryStringAndFragment',
      'regexpExtract',
      'regexpQuoteMeta',
      'reinterpretAsFloat32',
      'reinterpretAsFloat64',
      'reinterpretAsInt128',
      'reinterpretAsInt16',
      'reinterpretAsInt256',
      'reinterpretAsInt32',
      'reinterpretAsInt64',
      'reinterpretAsInt8',
      'reinterpretAsUInt128',
      'reinterpretAsUInt16',
      'reinterpretAsUInt256',
      'reinterpretAsUInt32',
      'reinterpretAsUInt64',
      'reinterpretAsUInt8',
      'roundAge',
      'roundDown',
      'roundDuration',
      'roundToExp2',
      'rowNumberInAllBlocks',
      'rowNumberInBlock',
      'splitByNonAlpha',
      'stringToH3',
      'subBitmap',
      'tgamma',
      'throwIf',
      'timeSlot',
      'timeSlots',
      'timeStampAdd',
      'timeStampSub',
      'timeZoneOffset',
      'toDateTimeUS',
      'toIPv4',
      'toIPv4OrDefault',
      'toIPv4OrNull',
      'toIPv4OrZero',
      'toIPv6',
      'toIPv6OrDefault',
      'toIPv6OrNull',
      'toIPv6OrZero',
      'toNullableString',
      'toTime',
      'toWeek',
      'toYearWeek',
      'to_char',
      'to_timestamp',
      'tokens',
      'translateUTF8',
      'tryBase58Decode',
      'tumble',
      'tumbleEnd',
      'tumbleStart',
      'tupleDivide',
      'tupleDivideByNumber',
      'tupleHammingDistance',
      'tupleMinus',
      'tupleMultiply',
      'tupleMultiplyByNumber',
      'tupleNegate',
      'tuplePlus',
      'tupleToNameValuePairs',
      'unhex',
      'untuple',
      'xor',
    ]),
  })
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT a.created_at FROM users a JOIN users b ON a.user_id = b.user_id ORDER BY b.created_at DESC LIMIT 2 BY a.user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."created_at" FROM (SELECT "a"."created_at" AS "created_at", row_number() OVER (PARTITION BY "a"."user_id" ORDER BY "b"."created_at" DESC) AS "__hogql_limit_by_row_0", "b"."created_at" AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "a" JOIN "ducklake"."analytics"."users" AS "b" ON ("a"."user_id" = "b"."user_id")) AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT properties.color FROM users ORDER BY user_id LIMIT 1 BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."color" FROM (SELECT json_extract_scalar("users"."properties", %(hogql_val_0)s) AS "color", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY "users"."user_id" ASC) AS "__hogql_limit_by_row_0", "users"."user_id" AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 1) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" ASC',
    dict({
      'hogql_val_0': '$["color"]',
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT properties.color, row_number() OVER (ORDER BY user_id) AS rn FROM users QUALIFY rn = 1 ORDER BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."color", "__hogql_trino_source_0"."rn" FROM (SELECT json_extract_scalar("users"."properties", %(hogql_val_0)s) AS "color", row_number() OVER (ORDER BY "users"."user_id" ASC) AS "rn", "users"."user_id" AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."rn" = 1) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" ASC',
    dict({
      'hogql_val_0': '$["color"]',
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id AS __hogql_order_0, created_at AS __hogql_limit_by_row_0 FROM users ORDER BY toStartOfDay(created_at) DESC LIMIT 2 BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."__hogql_order_0", "__hogql_trino_source_0"."__hogql_limit_by_row_0" FROM (SELECT "users"."user_id" AS "__hogql_order_0", "users"."created_at" AS "__hogql_limit_by_row_0", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY date_trunc(\'day\', "users"."created_at") DESC) AS "__hogql_limit_by_row_0_1", date_trunc(\'day\', "users"."created_at") AS "__hogql_order_0_1" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0_1" <= 2) ORDER BY "__hogql_trino_source_0"."__hogql_order_0_1" DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id AS id FROM users ORDER BY id DESC LIMIT 2 BY id]
  tuple(
    'SELECT "__hogql_trino_source_0"."id" FROM (SELECT "users"."user_id" AS "id", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY "users"."user_id" DESC) AS "__hogql_limit_by_row_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY "__hogql_trino_source_0"."id" DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id FROM users ORDER BY created_at DESC LIMIT 2 BY user_id LIMIT 5 OFFSET 1]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id" FROM (SELECT "users"."user_id" AS "user_id", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY "users"."created_at" DESC) AS "__hogql_limit_by_row_0", "users"."created_at" AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC OFFSET 1 ROWS LIMIT 5',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id FROM users ORDER BY toStartOfDay(created_at) DESC LIMIT 2 BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id" FROM (SELECT "users"."user_id" AS "user_id", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY date_trunc(\'day\', "users"."created_at") DESC) AS "__hogql_limit_by_row_0", date_trunc(\'day\', "users"."created_at") AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id, count() AS total FROM users GROUP BY user_id ORDER BY total DESC LIMIT 2 BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id", "__hogql_trino_source_0"."total" FROM (SELECT "users"."user_id" AS "user_id", count(*) AS "total", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY count(*) DESC) AS "__hogql_limit_by_row_0" FROM "ducklake"."analytics"."users" AS "users" GROUP BY 1) AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY "__hogql_trino_source_0"."total" DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id, created_at FROM users ORDER BY 2 DESC LIMIT 2 BY 1]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id", "__hogql_trino_source_0"."created_at" FROM (SELECT "users"."user_id" AS "user_id", "users"."created_at" AS "created_at", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY "users"."created_at" DESC) AS "__hogql_limit_by_row_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY 2 DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id, created_at FROM users ORDER BY 2 DESC LIMIT 2 BY user_id]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id", "__hogql_trino_source_0"."created_at" FROM (SELECT "users"."user_id" AS "user_id", "users"."created_at" AS "created_at", row_number() OVER (PARTITION BY "users"."user_id" ORDER BY "users"."created_at" DESC) AS "__hogql_limit_by_row_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."__hogql_limit_by_row_0" <= 2) ORDER BY 2 DESC',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id, row_number() OVER (ORDER BY created_at) AS position FROM users QUALIFY position = 1 ORDER BY created_at DESC LIMIT 3]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id", "__hogql_trino_source_0"."position" FROM (SELECT "users"."user_id" AS "user_id", row_number() OVER (ORDER BY "users"."created_at" ASC) AS "position", "users"."created_at" AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."position" = 1) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC LIMIT 3',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id, user_id = toString(1) AS bucket, row_number() OVER (ORDER BY user_id) AS rn FROM users QUALIFY rn > 0 ORDER BY user_id = toString(1.0) DESC LIMIT 1]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id", "__hogql_trino_source_0"."bucket", "__hogql_trino_source_0"."rn" FROM (SELECT "users"."user_id" AS "user_id", ("users"."user_id" = CAST(1 AS VARCHAR)) AS "bucket", row_number() OVER (ORDER BY "users"."user_id" ASC) AS "rn", ("users"."user_id" = CAST(1.0 AS VARCHAR)) AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."rn" > 0) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC LIMIT 1',
    dict({
    }),
  )
# ---
# name: test_wrapper_sort_projections_preserve_output[SELECT user_id, user_id = toString(1) AS bucket, row_number() OVER (ORDER BY user_id) AS rn FROM users QUALIFY rn > 0 ORDER BY user_id = toString(true) DESC LIMIT 1]
  tuple(
    'SELECT "__hogql_trino_source_0"."user_id", "__hogql_trino_source_0"."bucket", "__hogql_trino_source_0"."rn" FROM (SELECT "users"."user_id" AS "user_id", ("users"."user_id" = CAST(1 AS VARCHAR)) AS "bucket", row_number() OVER (ORDER BY "users"."user_id" ASC) AS "rn", ("users"."user_id" = CAST(true AS VARCHAR)) AS "__hogql_order_0" FROM "ducklake"."analytics"."users" AS "users") AS "__hogql_trino_source_0" WHERE ("__hogql_trino_source_0"."rn" > 0) ORDER BY "__hogql_trino_source_0"."__hogql_order_0" DESC LIMIT 1',
    dict({
    }),
  )
# ---
